--- a/photographer.html
+++ b/photographer.html
@@ -13,7 +13,9 @@
     </header>
     <main id="main">
       <div class="photograph-header">
+        <div class="photograph-profile"></div>
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        <div class="user"></div>
       </div>
     </main>
     <div id="contact_modal">
