--- a/photographer.html
+++ b/photographer.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil"></a>
+      <img src="assets/images/logo.png" class="logo" alt="Fisheye Logo"/>
+    </a>
     </header>
     <main id="main">
       <div class="photograph-header">
         <div class="photograph-profile"></div>
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        <button class="contact_button" aria-label="Bouton de fermeture du modal de contact" onclick="displayModal()">Contactez-moi</button>
    
       </div>
     </main>
@@ -25,23 +27,21 @@
           <img src="assets/icons/close.svg" onclick="closeModal()" />
         </header>
 				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <div>
-						<label>Nom</label>
-						<input />
-					</div>
-          <div>
-						<label>Email</label>
-						<input />
-					</div>
-          <div>
-						<label>Votre message</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
+				  <label class="modal-label" for="firstName">Prénom</label><br>
+      <input class="modal-input" type="text" id="firstName" name="firstName" minlength="2" pattern="(?!^ +$)^.+$"
+        required><br>
+
+      <label class="modal-label" for="lastName">Nom</label><br>
+      <input class="modal-input" type="text" id="lastName" name="lastName" minlength="2" pattern="(?!^ +$)^.+$"
+        required><br>
+
+      <label class="modal-label" for="email">E-mail</label><br>
+      <input class="modal-input" type="email" id="email" name="email" required><br>
+
+      <label class="modal-label" for="message">Votre message</label><br>
+      <input class="modal-input modal-msg" type="text" id="message" name="message" minlength="10" maxlength="100"
+        pattern="(?!^ +$)^.+$" required><br>
+          <button class="contact_button" aria-label="Bouton de soumission du formulaire du modal de contact">Envoyer</button>
 				</form>
 			</div>
 		</div>
