--- a/photographer.html
+++ b/photographer.html
@@ -35,7 +35,7 @@
       </div>
       <!-- The Modal/Lightbox -->
 <div id="myModal" class="modal">
-  <span class="close cursor" onclick="closeModal()">&times;</span>
+  <span class="close cursor" onclick="closeModalLightBox()">&times;</span>
   <div class="modal-content">
 
     <div class="mySlides">
@@ -122,7 +122,7 @@
       }
       
       // Close the Modal
-      function closeModal() {
+      function closeModalLightBox() {
         document.getElementById("myModal").style.display = "none";
       }
       
@@ -162,4 +162,3 @@
     <script src="./scripts/utils/contactForm.js"></script>
   </body>
 </html>
-
