--- a/photographer.html
+++ b/photographer.html
@@ -20,17 +20,17 @@
         
       </div>
       <div class="row">
-        <div class="column">
-          <img src="/assets/images/195/Architecture_On_a_hill.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+        <div class="id">
+          <img src="assets/images/`${id}`/`${title}`" onclick="openModal();currentSlide(1)" class="hover-shadow" alt="">
         </div>
         <div class="column">
-          <img src="/assets/images/82/Event_18thAnniversary.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+          <img src="/assets/images/82/Event_18thAnniversary.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" alt="">
         </div>
         <div class="column">
-          <img src="/assets/images/930/Sport_Next_Hold.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+          <img src="/assets/images/930/Sport_Next_Hold.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" alt="">
         </div>
         <div class="column">
-          <img src="/assets/images/925/Fashion_Melody_Red_on_Stripes.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+          <img src="/assets/images/925/Fashion_Melody_Red_on_Stripes.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" alt="">
         </div>
       </div>
       <!-- The Modal/Lightbox -->
@@ -38,24 +38,24 @@
   <span class="close cursor" onclick="closeModalLightBox()">&times;</span>
   <div class="modal-content">
 
-    <div class="mySlides">
+    <div class="id">
       <div class="numbertext">1 / 4</div>
-      <img src="/assets/images/195/Architecture_On_a_hill.jpg" style="width:100%">
+      <img src="assets/images/`${id}`/`${title}`" style="width:100%" alt="Nature">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="/assets/images/82/Event_18thAnniversary.jpg" style="width:100%">
+      <img src="/assets/images/82/Event_18thAnniversary.jpg" style="width:100%" alt="Snow">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="/assets/images/930/Sport_Next_Hold.jpg" style="width:100%">
+      <img src="/assets/images/930/Sport_Next_Hold.jpg" style="width:100%" alt="Mountains">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="/assets/images/925/Fashion_Melody_Red_on_Stripes.jpg" style="width:100%">
+      <img src="/assets/images/925/Fashion_Melody_Red_on_Stripes.jpg" style="width:100%" alt="Lights">
     </div>
 
     <!-- Next/previous controls -->
@@ -90,7 +90,7 @@
 			<div class="modal">
 				<header>
           <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+          <img src="assets/icons/close.svg" onclick="closeModal()" alt="" />
         </header>
 				<form>
 				  <label class="modal-label" for="firstName">Prénom</label><br>
@@ -114,7 +114,7 @@
 
 
 
-
+<!-- 
     <script>
       // Open the Modal
       function openModal() {
@@ -156,7 +156,7 @@
         dots[slideIndex-1].className += " active";
         captionText.innerHTML = dots[slideIndex-1].alt;
       }
-      </script>
+      </script> -->
 
     <script type="module" src="./scripts/pages/photographer.js"></script>
     <script src="./scripts/utils/contactForm.js"></script>
