accessibily-tabinfos-lightBox

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head> 
     <meta charset="utf-8"> 
-    <title>Fisheye - Portfolio pour photographes</title>
+    <title  >Fisheye - Portfolio pour photographes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Fisheye - Nos photographes">
   <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -12,13 +12,13 @@
   <body>
     <header>
       <a class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil">
-        <img src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
+        <img tabindex="0" src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
       </a>
         
-        <h1>Nos photographes</h1>
+        <h1 tabindex="1">Nos photographes</h1>
     </header>
     <main id="main">
-        <div class="photographer_section"></div>
+        <div tabindex="2" class="photographer_section"></div>
     </main>
     <script src="scripts/factories/photographer.js"></script>
     <script type="module" src="scripts/pages/index.js"></script>
