--- a/photographer.html
+++ b/photographer.html
@@ -75,29 +75,17 @@
 		</div>
 
 
-    <div class="lightbox-container">
-
-      <div class="lightbox-grid1">
-        <button class="lightbox-previous" aria-label="Bouton précédent du modal de lightbox" id="lightboxPreviousBtn">
-          <em class="fa-solid fa-chevron-left"></em>
-        </button>
-      </div>
-
-      <figure class="lightbox-grid2 lightbox-media" id="lightboxMedia"></figure>
-
-      <div class="lightbox-grid3">
-        <button class="lightbox-close" aria-label="Bouton de fermeture du modal de lightbox" id="lightboxCloseBtn">
-          <img class="lightbox-close-img" src="assets/icons/close-red.svg" alt="Red close button icon">
-        </button>
-        <button class="lightbox-next" aria-label="Bouton suivant du modal de lightbox" id="lightboxNextBtn">
-          <em class="fa-solid fa-chevron-right"></em>
-        </button>
-      </div>
-
-
-
+    <div id="lightbox">
+  <button class="lightbox__close"  id="lightboxCloseBtn">Fermer</button>
+  <button class="lightbox__next">Suivant</button>
+  <button class="lightbox__previous">Précédent</button>
+  <div class="lightbox__container">
+    <figure  id="lightboxMedia"></figure>
+  </div>
+  
     </div>
-
+ 
+ 
 
   
 
