--- a/photographer.html
+++ b/photographer.html
@@ -77,8 +77,8 @@
 
     <div id="lightbox">
   <button class="lightbox__close"  id="lightboxCloseBtn">Fermer</button>
-  <button class="lightbox__next">Suivant</button>
-  <button class="lightbox__previous">Précédent</button>
+  <button class="lightbox__next"  id="lightboxNextBtn">Suivant</button>
+  <button class="lightbox__previous"  id="lightboxPrevBtn">Précédent</button>
   <div class="lightbox__container">
     <figure  id="lightboxMedia"></figure>
   </div>
