--- a/photographer.html
+++ b/photographer.html
@@ -33,7 +33,7 @@
         <img src="./assets/icons/dropdown.svg" alt="" id="ms-4 dropdown-arrow" aria-hidden="true" />
        
       </button>
-      <ul id="sort-dropdown" class="p-0 w-100 border-0 dropdown-menu button-group sort-by-button-group" aria-labelledby="sort-title">
+      <ul id="sort-dropdown" class="p-0 w-100 border-0  button-group sort-by-button-group" aria-labelledby="sort-title">
         <li>
           <button
             id="sort-by-popularity"
