--- a/photographer.html
+++ b/photographer.html
@@ -30,7 +30,8 @@
 </div>
  <dialog class="modal" id="contactModal">
 				<header class="modal-header">
-          <h2 class="modal-title">Contactez-moi <br> </h2>
+          <h2 class="modal-title" >Contactez-moi <br> 
+            <div class="modal_title_namePhotographer" id="modal_title_namePhotographer"></div></h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" alt="text" />
         </header>
 				<form>
