--- a/photographer.html
+++ b/photographer.html
@@ -28,6 +28,7 @@
 
      
 </div>
+<div class="contactModal_background">
  <dialog class="modal" id="contactModal">
 				<header class="modal-header">
           <h2 class="modal-title" >Contactez-moi <br> 
@@ -52,6 +53,7 @@
           <button class="contact_button" aria-label="Bouton de soumission du formulaire du modal de contact">Envoyer</button>
 				</form>
 		</dialog>
+  </div>
     </main>
   
 
