--- a/photographer.html
+++ b/photographer.html
@@ -28,7 +28,7 @@
 
      
 </div>
-<div class="contactModal_background">
+<div class="contactModal_background" id="contactModal_background">
  <dialog class="modal" id="contactModal">
 				<header class="modal-header">
           <h2 class="modal-title" >Contactez-moi <br> 
