--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <a class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil"></a>
-      <img tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo"/>
+      <img  src="assets/images/logo.png" class="logo" alt="Fisheye Logo"/>
     </a>
     </header>
 
@@ -20,8 +20,8 @@
 
 
     <main id="main">
-      <div tabindex="1" class="photograph-header">
-        <div tabindex="2" class="photograph-profile"></div>
+      <div  class="photograph-header">
+        <div  class="photograph-profile"></div>
         <button class="contact_button" aria-label="Bouton d'ouverture de la modal de contact" onclick="displayModal()">Contactez-moi</button>
         
       </div>
