--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <body>
     <header>
       <a class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil">
-        <img tabindex="0" src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
+        <img src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
       </a>
         
-        <h1 tabindex="1">Nos photographes</h1>
+        <h1 >Nos photographes</h1>
     </header>
     <main id="main">
-        <div tabindex="2" class="photographer_section"></div>
+        <div class="photographer_section"></div>
     </main>
     <script src="scripts/factories/photographer.js"></script>
     <script type="module" src="scripts/pages/index.js"></script>
