--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head> 
     <meta charset="utf-8"> 
-    <title  >Fisheye - Portfolio pour photographes</title>
+    <title>Fisheye - Portfolio pour photographes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Fisheye - Nos photographes">
   <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -11,11 +11,11 @@
   </head>
   <body>
     <header>
-      <a class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil">
-        <img src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
+      <a tabindex="0" class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil">
+        <img  src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
       </a>
         
-        <h1 >Nos photographes</h1>
+        <h1 tabindex="1">Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
