--- a/photographer.html
+++ b/photographer.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png" >
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title id="title">Fisheye</title>
+    <title id="title" >Fisheye</title>
   </head>
   <body>
     <header>
-      <a class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil"></a>
-      <img  src="assets/images/logo.png" class="logo" alt="Fisheye Logo"/>
+      <a class="header-link"  href="./index.html" aria-label="Lien vers la page d'accueil"></a>
+      <img  tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo"/>
     </a>
     </header>
 
@@ -22,7 +22,7 @@
     <main id="main">
       <div  class="photograph-header">
         <div  class="photograph-profile"></div>
-        <button class="contact_button" aria-label="Bouton d'ouverture de la modal de contact" onclick="displayModal()">Contactez-moi</button>
+        <button class="contact_button" tabindex="4" aria-label="Bouton d'ouverture de la modal de contact" onclick="displayModal()">Contactez-moi</button>
         
       </div>
 
