--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <a tabindex="0" class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil">
+      <a tabindex="0" class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil avec le logo Fisheye">
         <img  src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
       </a>
         
