--- a/photographer.html
+++ b/photographer.html
@@ -22,7 +22,7 @@
     <main id="main">
       <div  class="photograph-header">
         <div  class="photograph-profile"></div>
-        <button class="contact_button" tabindex="4" aria-label="Bouton d'ouverture de la modal de contact" onclick="displayModal()">Contactez-moi</button>
+        <button class="contact_button" tabindex="4" aria-label="Bouton d'ouverture de la modal de contact, contactez-moi" alt="contactez-moi" onclick="displayModal()">Contactez-moi</button>
         
       </div>
 
