--- a/photographer.html
+++ b/photographer.html
@@ -61,11 +61,9 @@
         <span class="closeConf"></span>
         <div class="modalConf-body">
           <form id="formConf" name="reserve" action="index.html" method="get" onsubmit="return validate();">
-
+            <img class="closeConfirmationMessage"src="assets/icons/close.svg"  onclick="closeModal()" alt="fermeture" />
             <h1 class="text-label-conf">Merci ! </h1>
             <h1 class="text-label-conf2">Votre message a été envoyé.</h1>
-    
-            <input class="btn-submit-conf modal-btnConf" type="submit" class="button" value="fermer" />
           </form>
         </div>
       </div>
