--- a/photographer.html
+++ b/photographer.html
@@ -71,9 +71,9 @@
   
 
     <div id="lightbox">
-  <button class="lightbox__close"  id="lightboxCloseBtn" tabindex="37"></button>
-  <button class="lightbox__next"  id="lightboxNextBtn" tabindex="38"></button>
-  <button class="lightbox__previous"  id="lightboxPrevBtn" tabindex="39"></button>
+  <button class="lightbox__close" aria-label="bouton de fermeture de la lightbox"  id="lightboxCloseBtn" tabindex="37"></button>
+  <button class="lightbox__next" aria-label="bouton pour le prochain élément" id="lightboxNextBtn" tabindex="38"></button>
+  <button class="lightbox__previous" aria-label="bouton pour l'élément précédent" id="lightboxPrevBtn" tabindex="39"></button>
   <div class="lightbox__container">
     <figure  id="lightboxMedia"></figure>
   </div>
