--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <header>
       <a tabindex="0" class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil avec le logo Fisheye">
-        <img  src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
+        <img  src="assets/images/logo.png" class="header-logo" alt="">
       </a>
         
-        <h1 tabindex="1">Nos photographes</h1>
+        <h1 tabindex="0" aria-label="Nos photographes">Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
