--- a/photographer.html
+++ b/photographer.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <a class="header-link"  href="./index.html" aria-label="Lien vers la page d'accueil"></a>
-      <img  tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo"/>
+      <a class="header-link"  href="./index.html" aria-label=""></a>
+      <img  tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo qui est un Lien vers la page d'accueil"/>
     </a>
     </header>
 
@@ -22,7 +22,7 @@
     <main id="main">
       <div  class="photograph-header">
         <div  class="photograph-profile"></div>
-        <button class="contact_button"  tabindex="4" aria-label="Bouton d'ouverture de la modal de contact, contactez-moi" alt="contactez-moi" onclick="displayModal()">Contactez-moi</button>
+        <button class="contact_button"   aria-label=", contactez-moi,Bouton d'ouverture de la modal pour contacter le photographe" alt="contactez-moi" onclick="displayModal()">Contactez-moi</button>
         
       </div>
 
@@ -31,26 +31,26 @@
 <div class="contactModal_background" id="contactModal_background">
  <dialog class="modal" id="contactModal">
 				<header class="modal-header">
-          <h2 class="modal-title" tabindex="26" >Contactez-moi <br> 
+          <h2 class="modal-title"  >Contactez-moi <br> 
             <div class="modal_title_namePhotographer"  id="modal_title_namePhotographer"></div></h2>
-          <img src="assets/icons/close.svg" tabindex="27" onclick="closeModal()" alt="fermeture" />
+          <img src="assets/icons/close.svg" onclick="closeModal()" alt="fermeture" />
         </header>
 				<form id="form" aria-label="formulaire">
-				  <label class="modal-label" for="firstName" tabindex="28"  >Prénom</label><br>
-      <input class="modal-input" tabindex="29" type="text" id="firstName" name="firstName" minlength="2"   />
+				  <label class="modal-label" for="firstName"  >Prénom</label><br>
+      <input class="modal-input"  type="text" id="firstName" name="firstName" minlength="2"   />
       <div class="invalid-feedback">Veuillez entrer 2 caractères ou plus.</div>
 
-      <label class="modal-label" for="lastName" tabindex="30">Nom</label><br>
-      <input class="modal-input" tabindex="31" type="text" id="lastName" name="lastName" minlength="2"  />
+      <label class="modal-label" for="lastName" >Nom</label><br>
+      <input class="modal-input"  type="text" id="lastName" name="lastName" minlength="2"  />
       <div class="invalid-feedback">Veuillez entrer 2 caractères ou plus.</div>
 
-      <label class="modal-label" for="email" tabindex="32">E-mail</label><br>
-      <input class="modal-input" tabindex="33" type="email" id="email" name="email" />
+      <label class="modal-label" for="email" >E-mail</label><br>
+      <input class="modal-input"  type="email" id="email" name="email" />
     <div class="invalid-feedback">Vous devez entrer votre adresse email.</div>
-      <label class="modal-label" for="message" tabindex="34">Votre message</label><br>
-      <textarea class="modal-input modal-msg" tabindex="35" rows="15" cols="71" type="text" id="message" name="message" minlength="20" ></textarea>
+      <label class="modal-label" for="message" >Votre message</label><br>
+      <textarea class="modal-input modal-msg" rows="15" cols="71" type="text" id="message" name="message" minlength="20" ></textarea>
       <div class="invalid-feedback">Le message doit contenir au minimum 20 caractères.</div>
-          <button class="contact_button" id="submitValidation" type="submit" aria-label="Bouton de soumission du formulaire du modal de contact" tabindex="36">Envoyer</button>
+          <button class="contact_button" id="submitValidation" type="submit" aria-label="Bouton de soumission du formulaire du modal de contact" >Envoyer</button>
 				</form>
 		</dialog>
   </div>
@@ -71,9 +71,9 @@
   
 
     <div id="lightbox">
-  <button class="lightbox__close" aria-label="bouton de fermeture de la lightbox"  id="lightboxCloseBtn" tabindex="37"></button>
-  <button class="lightbox__next" aria-label="bouton pour le prochain élément" id="lightboxNextBtn" tabindex="38"></button>
-  <button class="lightbox__previous" aria-label="bouton pour l'élément précédent" id="lightboxPrevBtn" tabindex="39"></button>
+  <button class="lightbox__close" aria-label="bouton de fermeture de la lightbox"  id="lightboxCloseBtn" ></button>
+  <button class="lightbox__next" aria-label="bouton pour le prochain élément" id="lightboxNextBtn" ></button>
+  <button class="lightbox__previous" aria-label="bouton pour l'élément précédent" id="lightboxPrevBtn"></button>
   <div class="lightbox__container">
     <figure  id="lightboxMedia"></figure>
   </div>
