--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <a tabindex="0" class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil avec le logo Fisheye">
-        <img  src="assets/images/logo.png" class="header-logo" alt="">
+        <img  src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
       </a>
         
         <h1 tabindex="0" aria-label="Nos photographes">Nos photographes</h1>
