--- a/photographer.html
+++ b/photographer.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a class="header-link"  href="./index.html" aria-label=""></a>
+      <a class="header-link"  href="./index.html" ></a>
       <img  tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo qui est un Lien vers la page d'accueil"/>
     </a>
     </header>
@@ -71,9 +71,9 @@
   
 
     <div id="lightbox">
-  <button class="lightbox__close" aria-label="bouton de fermeture de la lightbox"  id="lightboxCloseBtn" ></button>
-  <button class="lightbox__next" aria-label="bouton pour le prochain élément" id="lightboxNextBtn" ></button>
-  <button class="lightbox__previous" aria-label="bouton pour l'élément précédent" id="lightboxPrevBtn"></button>
+  <button class="lightbox__close"  aria-label="bouton de fermeture de la lightbox"  id="lightboxCloseBtn" ></button>
+  <button class="lightbox__next"   aria-label="bouton pour le prochain élément" id="lightboxNextBtn" ></button>
+  <button class="lightbox__previous"   aria-label="bouton pour l'élément précédent" id="lightboxPrevBtn"></button>
   <div class="lightbox__container">
     <figure  id="lightboxMedia"></figure>
   </div>
