--- a/photographer.html
+++ b/photographer.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a class="header-link"  href="./index.html" ></a>
+      <a class="header-link"  href="./index.html" aria-label="Lien vers la page d'accueil"></a>
       <img  tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo qui est un Lien vers la page d'accueil"/>
     </a>
     </header>
