--- a/photographer.html
+++ b/photographer.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-      <a class="header-link"  href="./index.html" aria-label="Lien vers la page d'accueil"></a>
-      <img  tabindex="0" src="assets/images/logo.png" class="logo" alt="Fisheye Logo qui est un Lien vers la page d'accueil"/>
-    </a>
+      <a tabindex="0" class="header-link" href="./index.html" aria-label="Lien vers la page d'accueil avec le logo Fisheye">
+        <img src="assets/images/logo.png" class="header-logo" alt="Fisheye Logo">
+      </a>
     </header>
 
    
