fix-button-close-modal

--- a/photographer.html
+++ b/photographer.html
@@ -33,7 +33,7 @@
 				<header class="modal-header">
           <h2 class="modal-title" alt="contactez-moi" >Contactez-moi <br> 
             <div class="modal_title_namePhotographer"  id="modal_title_namePhotographer"></div></h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" alt="fermeture" />
+          <img src="assets/icons/closeModal.svg" onclick="closeModal()" alt="fermeture" />
         </header>
 				<form id="form" aria-label="formulaire">
 				  <label class="modal-label" for="firstName"  >Prénom</label><br>
